<resources>
    <string name="app_name">Day to Day</string>

    <string name="btn_login">Login</string>
    <string name="btn_registro">Registro</string>

    <string name="crearcuentatxt">Crear Cuenta</string>
    <string name="nombresEt">Nombre(s)</string>
    <string name="correoElectEt">Correo Electrónico</string>
    <string name="contraseñaEt">Contraseña</string>
    <string name="confirmContraseñaEt">Confirmar Contraseña</string>
    <string name="registrarUsuario">Registrar</string>
    <string name="tengoCuenta">Tengo una cuenta</string>


    <!--LOGIN-->
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="correoLogin">Correo</string>
    <string name="passLogin">Contraseña</string>
    <string name="btn_logeo">Ingresar</string>
    <string name="usuarioNuevo">¿No tienes una cuenta?. Registrate</string>

    <!--MENU PRINCIPAL-->
    <string name="bienvenidoPrincipal">Bienvenido(a)</string>
    <string name="uidPrincipal"> -- </string>
    <string name="nombresPrincipal"> -- </string>
    <string name="correoPrincipal"> -- </string>

    <string name="agregarNotas">Agregar</string>
    <string name="listarNotas">Mis Notas</string>
    <string name="importantes">Importantes</string>
    <string name="Contactos">Contactos</string>
    <string name="emerg">Emergencias</string>
    <string name="acercaDe">Acerca De</string>
    <string name="chats">Chats</string>
    <string name="cerrarSesion">Salir</string>

    <!--AGREGAR NOTA-->
    <string name="uid_usuario">Uid Usuario</string>
    <string name="correo_usuario">Correo de Usuario</string>
    <string name="fecha_hora_actual_TXT">Fecha de registro</string>
    <string name="fecha_hora_actual">Fecha y Hora Actual</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="btn_calendario">Calendario</string>
    <string name="fecha">00/00/000</string>
    <string name="estado">No finalizado</string>

    <!--MENU-->
    <string name="agregar_nota_bd">Agregar</string>
    <string name="Actualizar_Nota_BD">Actualizar</string>
    <string name="Perfil_usuario">Perfil del Usuario</string>
    <string name="Actualizar_pass">Actualizar pass</string>
    <string name="Agregar_contacto">Agregar contacto</string>
    <string name="Vaciar_contactos">Eliminar todos los contactos</string>
    <string name="Buscar_contactos">Buscar contactos</string>

    <!--ITEM NOTA-->
    <string name="id_nota_item">Id Nota</string>
    <string name="uid_usuario_item">Uid Usuario</string>
    <string name="correo_usuario_item">Correo de Usuario</string>
    <string name="fecha_hora_registro_item">Fecha y Hora Registro</string>
    <string name="titulo_item">Titulo</string>
    <string name="descripcion_item">Descripcion</string>
    <string name="fecha_item">00/00/000</string>
    <string name="estado_item">No finalizado</string>

    <!--CUADRO DE DIALOGO OPCIONES-->
    <string name="ElijaOpcionTXT">Elija una opción</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>

    <!--ACTUALIZAR NOTA-->
    <string name="Id_nota_A">Id nota</string>
    <string name="Uid_Usuario_A"> Uid del usuario</string>
    <string name="Correo_usuario_A">Correo de usuario</string>
    <string name="Fecha_registro_A">Fecha de registro</string>
    <string name="Titulo_A"> Título </string>
    <string name="Descripcion_A"> Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A"> 00/00/0000 </string>
    <string name="Estado_A"> No finalizado</string>
    <string name="Estado_nuevo"> -- </string>

    <!---SPINNER - ESTADO-->
    <string-array name="Estados_nota">
        <item>"No finalizado"</item>
        <item>"Finalizado"</item>
    </string-array>

    <!--DETALLE NOTA-->
    <string name="Id_nota_Detalle_TXT">Id de la nota: </string>
    <string name="Id_nota_Detalle">Id nota</string>
    <string name="Uid_usuario_Detalle_TXT">Uid de usuario: </string>
    <string name="Uid_usuario_Detalle">Uid usuario</string>
    <string name="Correo_usuario_Detalle_TXT">Correo de usuario: </string>
    <string name="Correo_usuario_Detalle">Correo usuario</string>
    <string name="Titulo_Detalle_TXT">Título: </string>
    <string name="Titulo_Detalle">Título</string>
    <string name="Descripcion_Detalle_TXT">Descripción: </string>
    <string name="Descripcion_Detalle">Descripcion</string>
    <string name="Fecha_registro_Detalle_TXT">Fecha de registro: </string>
    <string name="Fecha_Registro_Detalle">Fecha registro</string>
    <string name="Fecha_Nota_Detalle_TXT">Fecha nota: </string>
    <string name="Fecha_Nota_Detalle">Fecha nota</string>
    <string name="Estado_Detalle_TXT">Estado de la nota: </string>
    <string name="Estado_Detalle">Estado</string>
    <string name="Boton_Importante">Importante</string>

    <!--Perfil del usuario-->
    <string name="Uid_Perfil">Uid</string>
    <string name="Nombres_Perfil">Mis nombres</string>
    <string name="Apellidos_Perfil">Mis apellidos</string>
    <string name="Correo_Perfil">Correo</string>
    <string name="Edad_Perfil">Edad</string>
    <string name="Telefono_Perfil">Teléfono</string>
    <string name="Domicilio_Perfil">Domicilio</string>
    <string name="Padecimientos_Perfil">Padecimientos</string>
    <string name="Medicamentos_Perfil">Medicamentos</string>
    <string name="Fecha_Nacimiento_Perfil">Fecha de nac.</string>
    <string name="Guardar_Datos">Guardar datos</string>

    <!--CUADRO DE DIÁLOGO - ESTABLECER TELÉFONO-->
    <string name="Establecer_Telefono">Escriba su teléfono</string>
    <string name="Btn_Aceptar_Telefono">Aceptar</string>

    <!--Perfil del usuario [Imagen de perfil]-->
    <string name="BtnElegirImagenDe">Elegir imagen de</string>
    <string name="BtnActualizarImagen">Actualizar imagen</string>

    <!--CUADRO DE DIÁLOGO - ELEGIR IMAGEN DE-->
    <string name="ElegirImagenTXT">Elegir imagen de:</string>
    <string name="Btn_Elegir_Galeria">Galería</string>
    <string name="Btn_Elegir_Camara">Cámara</string>

    <!--ITEM CONTACTO-->
    <string name="Id_c_Item"> Id contacto</string>
    <string name="Uid_c_Item"> Uid usuario</string>
    <string name="nombres_c_Item">Nombres</string>
    <string name="apellidos_c_Item">Apellidos</string>
    <string name="correo_c_Item">Correo</string>
    <string name="telefono_c_Item">Teléfono</string>
    <string name="edad_c_Item">Edad</string>
    <string name="direccion_c_Item">Dirección</string>

    <!--AGREGAR CONTACTO-->
    <string name="Uid_Usuario_C">Mi uid</string>
    <string name="Nombres_C">Nombres contacto</string>
    <string name="Apellidos_C">Apellidos contacto</string>
    <string name="Correo_C">Correo electrónico</string>
    <string name="Telefono_C">Teléfono</string>
    <string name="Edad_C">Edad</string>
    <string name="Direccion_C">Dirección</string>
    <string name="Btn_Guardar_Contacto">Guardar contacto</string>

    <!--CUADRO DE DIÁLOGO - VALIDAR REGISTRO DE CONTACTO-->
    <string name="ValidarTXT">Por favor complete al menos el campo nombre del contacto</string>
    <string name="Btn_Validar_Registro_C">Entendido</string>

    <!--DETALLE CONTACTO-->
    <string name="DetalleContactoTXT">Detalle del contacto</string>
    <string name="Id_C_D"> -- </string>
    <string name="Uid_Usuario_D"> -- </string>
    <string name="Nombre_C_D"> -- </string>
    <string name="Apellidos_C_D"> -- </string>
    <string name="Correo_C_D"> -- </string>
    <string name="Telefono_C_D"> -- </string>
    <string name="Edad_C_D"> -- </string>
    <string name="Direccion_C_D"> -- </string>
    <string name="Llamar_C">Llamar</string>
    <string name="Mensaje_C">Mensaje</string>

    <!--CUADRO DE DIÁLOGO - OPCIONES PARA EL CONTACTO-->
    <string name="ElegirOpcionContactoTXT">Seleccione una opción para el contacto</string>
    <string name="Btn_Eliminar_C">Eliminar</string>
    <string name="Btn_Actualizar_C">Actualizar</string>

    <!--ACTUALIZAR CONTACTO-->
    <string name="Id_C_A"> -- </string>
    <string name="Uid_C_A"> -- </string>
    <string name="Nombres_C_A"> -- </string>
    <string name="Apellidos_C_A"> -- </string>
    <string name="Correo_C_A"> -- </string>
    <string name="Telefono_C_A"> -- </string>
    <string name="Edad_C_A"> -- </string>
    <string name="Direccion_C_A"> -- </string>
    <string name="Btn_Actualizar_C_A">Actualizar</string>

</resources>