<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciarSesion"
            android:fontFamily="@font/robotoslab"
            android:textSize="25sp"
            android:gravity="center">
        </TextView>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="loginicon.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/correoLogin"
                android:hint="@string/correoLogin"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:fontFamily="@font/robotoslab"
                android:inputType="textEmailAddress">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passLogin"
                android:hint="@string/passLogin"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:fontFamily="@font/robotoslab"
                android:inputType="textPassword">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_logeo"
            android:text="@string/btn_logeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:layout_marginTop="10dp">
        </Button>

        <TextView
            android:id="@+id/usuarioNuevo"
            android:text="@string/usuarioNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/robotoslab"
            android:layout_marginTop="20dp">

        </TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>