<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <!--ANIMACION-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="calendario.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>

        <!--TITULO-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:layout_marginTop="15dp"
            android:textSize="30sp"
            android:text="@string/app_name"/>

        <!--BOTON LOGIN-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/robotoslab"
            android:text="@string/btn_login"
            android:textSize="20sp" />

        <!--BOTON REGISTRO-->
        <Button
            android:id="@+id/btn_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/robotoslab"
            android:text="@string/btn_registro"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>